--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 </head>
 
 <body>
+    <h1>Titolo</h1>
+    <button>ciao</button>
     <form>
         <input type="text" placeholder="prova">
     </form>
