--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <button>ciao</button>
     <button>ciaone</button>
 
-    <a href="<div class=" accordion" id="accordionExample">
+    <a href="div class= accordion" id="accordionExample">
         <div class="card">
             <div class="card-header" id="headingOne">
                 <h2 class="mb-0">
